--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.2.0",
     "bcryptjs": "^2.4.3",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "zod": "^3.22.2",
