--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/bcryptjs": "^2.4.3",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^3.0.9",
     "eslint": "^8.48.0",
     "prisma": "^5.2.0",
     "source-map-support": "^0.5.21",
