--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e:watch": "vitest --config ./vitest.config.e2e.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.427.0",
     "@nestjs/common": "^10.2.7",
     "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^10.0.0",
