--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vitest/coverage-v8": "^0.34.3",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.9",
+    "ioredis": "^5.3.2",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
